    Hive Web UI. (Edward Capriolo via athusoo)

    HIVE-356. Treat Object[] and List<Object> differently.
    (Zheng Shao via namit)

    HIVE-373. 1 reducer should be used if no grouping key is present in all 
    scenarios. (Namit Jain via zshao)

    HIVE-375. LazySimpleSerDe directly creates a UTF8 buffer for primitive types.
    (Zheng Shao via namit)

Release 0.2.0 - Unreleased

  INCOMPATIBLE CHANGES

    HIVE-194. Support specifying decimal places for ROUND function.
    ROUND always rounds away from zero now. (David Phillips via zshao)

  NEW FEATURES

    HIVE-223. Single map-reduce group-by using map-side aggregation.
    (Namit Jain via zshao)

    HIVE-269. Add log/exp/pow UDF functions to Hive. (zshao)

    HIVE-258. New UDF IF(test, valueTrue, valueFalseOrNull). (zshao)

    HIVE-105. Automatically estimate number of required reducers. (zshao)

    HIVE-176. Added a history log for Hive. (Suresh Anthony via athusoo)

    HIVE-244. Add SQRT() UDF. (Jeff Hammerbacher via zshao)

    HIVE-216. Generate ruby bindings for service. (Raghotham Murthy via zshao)

    HIVE-163. JSON udf function added. (Hao Liu via zshao)

    HIVE-142. Add a metastore check command. (Johan Oskarsson via zshao)

    HIVE-91. Add ADD PARTITION support to ALTER TABLE in order to add
    partitions to a table. (Johan Oskarsson via athusoo)

    HIVE-148. Extend bin/hive to include the lineage tool.
    (Suresh Antony via zshao)

    HIVE-147. Add a tool for extracting lineage info from hive sql.
    (Suresh Antony via zshao)

    HIVE-48.  Support JDBC connections for interoperability between 
    Hive and RDBMS.  (Raghotham Murthy and Michi Mutsuzaki via dhruba)

    HIVE-140. Event Based Infrastructure for Syntax Trees in the compiler.
    (Ashish Thusoo through zshao)

    HIVE-98. Dependency management with hadoop core using ivy.
    (Ashish Thusoo through zshao)

    HIVE-73. Thrift Server and Client for Hive (Raghu through zshao)
