@@ -1526,7 +1526,7 @@ specifier|final
 name|int
 name|javaObjectOverHead
 init|=
-literal|16
+literal|64
 decl_stmt|;
 specifier|private
 specifier|static
@@ -3300,6 +3300,13 @@ name|hashAggregations
 operator|=
 literal|null
 expr_stmt|;
+name|LOG
+operator|.
+name|warn
+argument_list|(
+literal|"Hash Table completed flushed"
+argument_list|)
+expr_stmt|;
 return|return;
 block|}
 name|int
@@ -3312,7 +3319,7 @@ argument_list|()
 decl_stmt|;
 name|LOG
 operator|.
-name|trace
+name|warn
 argument_list|(
 literal|"Hash Tbl flush: #hash table = "
 operator|+
@@ -3396,7 +3403,21 @@ literal|10
 operator|>=
 name|oldSize
 condition|)
+block|{
+name|LOG
+operator|.
+name|warn
+argument_list|(
+literal|"Hash Table flushed: new size = "
+operator|+
+name|hashAggregations
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
 return|return;
+block|}
 block|}
 block|}
 comment|/**    * Forward a record of keys and aggregation results.    *     * @param keys    *          The keys in the record    * @throws HiveException    */
@@ -3702,32 +3723,78 @@ operator|!=
 literal|null
 condition|)
 block|{
-comment|// hash-based aggregations
-for|for
-control|(
+name|LOG
+operator|.
+name|warn
+argument_list|(
+literal|"Begin Hash Table flush at close: size = "
+operator|+
+name|hashAggregations
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|Iterator
+name|iter
+init|=
+name|hashAggregations
+operator|.
+name|entrySet
+argument_list|()
+operator|.
+name|iterator
+argument_list|()
+decl_stmt|;
+while|while
+condition|(
+name|iter
+operator|.
+name|hasNext
+argument_list|()
+condition|)
+block|{
+name|Map
+operator|.
+name|Entry
+argument_list|<
 name|ArrayList
 argument_list|<
 name|Object
 argument_list|>
-name|key
-range|:
-name|hashAggregations
+argument_list|,
+name|UDAFEvaluator
+index|[]
+argument_list|>
+name|m
+init|=
+operator|(
+name|Map
 operator|.
-name|keySet
+name|Entry
+operator|)
+name|iter
+operator|.
+name|next
 argument_list|()
-control|)
-block|{
+decl_stmt|;
 name|forward
 argument_list|(
-name|key
-argument_list|,
-name|hashAggregations
+name|m
 operator|.
-name|get
-argument_list|(
-name|key
+name|getKey
+argument_list|()
+argument_list|,
+name|m
+operator|.
+name|getValue
+argument_list|()
 argument_list|)
-argument_list|)
+expr_stmt|;
+name|iter
+operator|.
+name|remove
+argument_list|()
 expr_stmt|;
 block|}
 name|hashAggregations
